test-suite/parser/pass/for_in_range.first
interaction main() -> Unit {
  for i in 1..5 { let x: Int = i; };
  return;
}
