test-suite/parser/fail/malformed_for.first
interaction main() -> Unit {
  for i 1..10 { };
  return;
}
